[metadata]
name = lambeq
desciption = A QNLP toolkit
long_description = file: README.md
long_description_content_type = text/markdown
author = Cambridge Quantum QNLP team
license = Apache-2.0
license_files = file: LICENSE.md

[options]
packages = lambeq
install_requires =
    depccg == 1.1.0
    discopy >= 0.3.7.1
    pytket >= 0.10.0
    tensornetwork

    chainer <= 6.0.0  # this is a hack to get pip to behave properly
python_requires = >=3.7

[options.extras_require]
all =
    torch

test =
    coverage
    pytest
    torch
